<resources>
    <string name="app_name">Portfolio</string>

    <string name="portfolio">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="btn_spotify_streamer">Spotify Streamer</string>
    <string name="btn_fotball_scores">Football Scores</string>
    <string name="btn_library">Library</string>
    <string name="btn_build_it_bigger">Build it Bigger</string>
    <string name="btn_xyz_reader">XYZ Reader</string>
    <string name="btn_capstone">Capstone</string>

    <string name="toast_launch_project_buttons">This button will launch my %1$s Project App!</string>

</resources>