<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/portfolio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_spotify_streamer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_spotify_streamer"/>

        <Button
            android:id="@+id/btn_fotball_scores"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:text="@string/btn_fotball_scores" />

        <Button
            android:id="@+id/btn_library"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_library" />

        <Button
            android:id="@+id/btn_xyz_reader"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_xyz_reader" />

        <Button
            android:id="@+id/btn_build_it_bigger"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_build_it_bigger" />

        <Button
            android:id="@+id/btn_capstone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/btn_capstone" />

    </LinearLayout>
</RelativeLayout>
